--- a/README.Rmd
+++ b/README.Rmd
@@ -60,6 +60,20 @@ library(mmconvert)
 mmconvert(input_df)
 ```
 
+If you want to give the input positions in Mbp rather than basepairs,
+use the argument `input_type="Mbp"`.
+
+```{r mmconvert_Mbp}
+input_df$pos <- input_df$pos / 1e6
+input_df
+mmconvert(input_df, input_type="Mbp")
+```
+
+The input positions can also be provided in sex-averaged, female, or male cM.
+But note that the bp or Mbp positions must be in mouse genome build
+39, and cM positions must be according to the
+[Cox Map V3](https://github.com/kbroman/CoxMapV3).
+
 ---
 
 #### License
