changed master -> main branch in MUGAarrays and qtl2data

--- a/README.Rmd
+++ b/README.Rmd
@@ -90,7 +90,7 @@ the revised Cox genetic map.
 
 ```{r cross2_to_grcm39, eval=FALSE}
 file <- paste0("https://raw.githubusercontent.com/rqtl/",
-               "qtl2data/master/DOex/DOex.zip")
+               "qtl2data/main/DOex/DOex.zip")
 
 library(qtl2)
 DOex <- read_cross2(file)
